--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,51 +8,70 @@ body {
     font-size: 2rem;
 }
 
-.navbar {
+header {
     background-color: gainsboro;
 }
 
-.menu {
-    display: inline-block;
-    border-bottom: 0.1rem solid black;
-    border-left: 0.1rem solid black;
+header > i {
+    visibility: hidden;
 }
 
-.navbar > ul .menu {
-    display: inline-block;
-    text-align: center;
-    padding: 1rem 2.5rem;
-    margin: 1rem 0;
-    cursor: pointer;
+.navbar ul {
+    margin: 0;
+    padding: 0;
 }
 
-.navbar > ul .menu:hover {
-    background-color: black;
-    color: white;
-}
-
-.navbar li ul {
-    display: none;
-    text-align: center;
+.navbar li {
     list-style: none;
+    float: left;
+    position: relative;
+    background-color: #6267ff;
+    border-right: 0.1rem solid black;
+    border-bottom: 0.1rem solid black;
+    transition: background-color;
+    transition-duration: 2s;
+    transition-delay: 0.5s;
 }
 
-.navbar li:hover ul {
-    display: block;
-    color: black;
-    position: absolute;
-}
-
-.navbar li ul li {
-    border: 1px solid black;
+.navbar li:hover {
+    color: white;
     background-color: gainsboro;
-    text-align: center;
 }
 
-@media screen and (max-width: 650px) {
-    .navbar > ul .menu {
+.navbar ul li a {
+    color: white;
+    text-decoration-line: none;
+    display: block;
+    text-align: center;
+    width: 15rem;
+    height: 2.5rem;
+    padding: 1.5rem;
+    transition: text-shadow;
+    transition-duration: 0.5s;
+}
+
+.navbar ul li a:hover {
+    font-weight: bold;
+    color: black;
+    text-shadow: 1px 2px 1px white;
+}
+
+.navbar ul ul {
+    position: absolute;
+    visibility: hidden;
+}
+.navbar ul li:hover ul {
+    visibility: visible;
+}
+
+@media screen and (max-width: 740px) {
+    .navbar ul  {
         display: block;
-        text-align: left;
+        width: 20%;
+    }
+    header > i  {
+        visibility: visible;
     }
 }
+
 
